default/objects/Opportunity_List_User_Filter__c/Opportunity_List_User_Filter__c.object-meta.xml
<CustomObject>
    <description>Stores the filters for a User&apos;s opportunity list within an account plan</description>
    <label>Opportunity List User Filter</label>
    <nameField>
        <displayFormat>OLUF-{0000}</displayFormat>
        <label>Opportunity List User Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity List User Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>