default/objects/Opportunity_List_User_Filter__c/fields/AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>AccountPlan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Opportunity List User Filters</relationshipLabel>
    <relationshipName>Opportunity_List_User_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>