default/objects/Opportunity_List_User_Filter__c/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>Stores filters as a json string</description>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>