default/objects/Opportunity_List_User_Filter__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_List_User_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>